styles/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

html {
  @apply bg-black;
}

body {
  height: 100vh;
  overflow-y: auto;
  scroll-snap-type: y mandatory;
  scroll-padding: 0px;
  position: relative;
  overflow-x: hidden;
  @apply background-color;
}

::selection {
  background-color: #f97316;
}

p {
  @apply font-light leading-[1.75] text-lg md:text-xl md:leading-[2];
}

a:hover,
button:hover {
  color: #cca69a;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

.tracking-04 {
  letter-spacing: -0.04em;
}

.modal-body {
  position: fixed;
  top: 50%;
  right: 0px;
  width: 0px;
  height: 0px;
  @apply bg-black;
  z-index: 40;
  transition: 1s;
  overflow: hidden;
}

.open {
  display: flex;
  position: fixed;
  right: 0px;
  top: 0px;
  width: 100%;
  height: 100%;
  transition: 1s;
}

a {
  transition: all 0.5s ease;
  color: inherit;
  text-decoration: none;
  &:hover {
    color: #f97316 !important;
    border-color: #f97316;
  }
}

.link-animation {
  &::after {
    content: "";
    display: block;
    width: 0;
    height: 1.5px;
    background: #f97316;
    transition: width 0.4s ease-in;
  }

  &:hover::after {
    width: 100%;
  }
}

// .link-border {
//   &::after {
//     content: "";
//     display: block;
//     width: 100%;
//     height: 1.5px;
//     background: #f97316;
//   }
// }

.slogan {
  @apply md:mx-0 font-bold text-5xl  md:text-9xl tracking-tighter text-color leading-[1];

  &:hover {
    .keyword {
      transition: 0.8s ease-in;
      @apply decoration-primary text-primary;
    }
  }
}

.sub-slogan {
  @apply md:mx-0 font-bold text-5xl  md:text-8xl tracking-tighter text-[#818cf8] leading-[1] red-animation;

  &:hover {
    .keyword {
      transition: 0.8s ease-in;
      @apply decoration-primary text-primary;
    }
  }
}

.job {
  @apply mx-4 md:mx-0 font-bold text-5xl  md:text-2xl tracking-tighter text-color leading-[1];

  &:hover {
    .keyword {
      transition: 0.8s ease-in;
      @apply decoration-primary text-primary;
    }
  }
}

.pagination {
  @apply mt-20 self-center gap-x-0 md:gap-x-4 flex items-center justify-center;

  .previous,
  .next {
    @apply h-11 w-auto px-4  text-base md:text-xl whitespace-nowrap;
  }

  li:not(.active) {
    @apply text-[#2F2E30];
  }

  .active {
    &:hover {
      @apply bg-gray-300 text-color;
    }
    @apply text-color bg-gray-800 font-light;
  }

  li {
    @apply cursor-pointer font-light text-lg md:text-xl h-11 w-11 items-center justify-center flex rounded-lg bg-white;

    &:hover {
      @apply bg-inherit text-[#94a3b8];
    }

    a {
      @apply flex items-center justify-center w-full h-full;
    }
  }

  a:hover {
    color: inherit;
  }
}

.show-more {
  background: linear-gradient(
      90deg,
      #000000 0%,
      #000000 50%,
      transparent 50%,
      transparent 100%
    )
    no-repeat right bottom;
  background-size: 200% 100%;
  border: 1px solid #000000;
  transition: all 0.75s ease;
  @apply mt-20 border border-black self-center px-10 py-3 font-medium;
  &:hover {
    background-position: left top;
    opacity: 1;
    color: white;
  }
}

.nav-animation {
  transition: 0.2s ease-in;
  @apply hover:text-orange-500 hover:border-orange-500;
}

.red-animation {
  transition: 0.5s ease-in;
  @apply hover:text-orange-500;
}

.svg-animation {
  transition: 0.2s ease-in;
  @apply hover:fill-orange-500;
}

svg {
  transition: 0.2s ease-in;
  @apply hover:fill-white;
}

.indigo-bg {
  background-color: #818cf8;
}

.text-color {
  @apply text-black dark:text-white;
}

.background-color {
  @apply bg-slate-50 dark:bg-black;
}

.homepage {
  @apply background-color mx-auto w-full;
  &::-webkit-scrollbar-track {
    height: 100vh;
    color: red;
    background-color: red;
  }

  &::-webkit-scrollbar {
    height: 100vh;
    color: red;
    background-color: red;
    position: absolute;
    top: 0;
    z-index: 100;
  }
  height: 100%;

  section {
    @apply flex flex-col relative 2xl:px-32 md:mx-32 mx-4 justify-around;
    height: 100vh;
    scroll-snap-align: start;
    scroll-snap-stop: always;
  }

  .scroll-button {
    // @apply right-0 w-full absolute bottom-0;
    @apply static;
  }

  #experience {
    @apply md:h-screen overflow-y-auto justify-evenly;

    .subtitle {
      @apply text-lg md:text-2xl text-gray-500 ml-2;
    }

    .title {
      @apply text-xl md:text-2xl;
    }

    .text {
      @apply text-gray-400 text-sm md:text-base  font-light md:font-normal mt-4 md:mx-6;
    }
  }
}

.portfolio {
  @apply w-full px-4 md:px-20 background-color;

  .portfolio-body {
    @apply md:mt-12 w-full snap-y snap-mandatory overflow-y-scroll flex flex-col md:ml-2 list-disc list-inside items-start gap-y-6 md:gap-y-12;
    &::-webkit-scrollbar {
      width: 0px;
      background: transparent;
    }

    .portfolio-item {
      @apply ml-4 md:ml-8 flex flex-col text-color  text-xs md:text-sm font-normal md:font-bold justify-center cursor-pointer hover:opacity-[0.3];
    }
  }
}

.toggle-wrapper {
  width: 110px;
  display: block;

  .toggle {
    height: 45px;
    width: 90px;
    @apply bg-indigo-300 dark:bg-indigo-300;
    border-radius: 40px;
    padding: 12px;
    position: relative;
    margin: auto; // Optional to center the toggle
    cursor: pointer;
  }

  .toggle::before {
    content: "";
    display: block;
    height: 31px;
    width: 31px;
    border-radius: 30px;
    @apply dark:bg-black bg-white;
    position: absolute;
    z-index: 2;
    transform: translate(-3px, -5px);
    transition: transform 0.5s ease;
  }

  .toggle.enabled::before {
    transform: translate(40px, -5px);
  }

  .toggle input {
    position: absolute;
    top: 0;
    opacity: 0;
  }

  .toggle .icons {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 100%;
    margin: 0 0px;
  }

  .toggle .icons svg {
    @apply fill-yellow-300;

    height: 25px;
    width: 25px;
    z-index: 0;
  }
}

